<resources>
    <string name="app_name">Asteroid Rader App</string>
    <string name="absolute_magnitude_format">%f au</string>
    <string name="estimated_diameter_format">%f km</string>
    <string name="relative_velocity_format">%s km/hr</string>
    <string name="distance_from_earth_format">%s km</string>

    <string name="picture_of_the_day_loading_error_message">Couldn’t load image\nCheck internet Connection</string>
    <string name="picture_of_the_day_heading_text">Image of the Day</string>
    <string name="close_approach_date_title">Close Approach Date</string>
    <string name="absolute_magnitude_title">Absolute Magnitude</string>
    <string name="estimated_diameter_title">Estimated Diameter</string>
    <string name="relative_velocity_title">Relative Velocity</string>
    <string name="distance_from_earth_title">Distance From Earth</string>
    <string name="today_asteroids">Today Asteroids</string>
    <string name="this_week_asteroids">This week Asteroids</string>
    <string name="saved_asteroids">Saved Asteroids</string>
    <string name="picture_of_the_day_content_description">The picture of the day is %s</string>
    <string name="potentially_hazardous_asteroid_icon">Potentially hazardous Asteroid icon</string>
    <string name="not_hazardous_asteroid_icon">Not hazardous Asteroid icon</string>
    <string name="potentially_hazardous_asteroid_image">Potentially hazardous Asteroid image</string>
    <string name="not_hazardous_asteroid_image">Not hazardous Asteroid image</string>


</resources>